syntax = "proto3";

package iquiz;

message Question {
	int32 id = 1;
	string question = 2;
	string correctAnswer = 3;
	repeated string answerOptions = 4; 
}

message Answer {
	int32 id = 1;
	string answer = 2;
	bool isCorrect = 3;
}

message QuizResponse {
	string name = 1;
	repeated Answer answers = 2;
}

message QuestionList {
	repeated Question questions = 1;
}

message Rank {
	string name = 1;
	int32 points = 2;
	int32 ranking = 3;
	int32 totalParticipants = 4;
}

message RankingList {
	repeated Rank rankings = 1;
}

message Void {}

service Quiz {
	rpc List(Void) returns(QuestionList) {}
	rpc Response(QuizResponse) returns(Rank){}
	rpc Rankings(Void) returns(RankingList){}
}